Subidos recursos, realizadas variables, realizado el header en mobile version

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -1,8 +1,13 @@
 // Tipografias //
 
-$primary-font: "Plus Jakarta Sans", sans-serif;
+$primary-font: "Space Grotesk", sans-serif;
 
 // Colores //
+$black: #151515;
+$green: #4ee1a0;
+$dark-grey: #242424;
+$grey: #d9d9d9;
+$white: #ffffff;
 
 // Breakpoints //
 $bp-tablet: 768px;
