--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,2 +1,19 @@
 @use "../abstracts/_variables" as *;
 @use "../abstracts/_mixins" as *;
+
+.header_principal {
+  margin-left: 80px;
+  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+  gap: 20px;
+  &__logo img {
+    width: 130px;
+  }
+  &__icons {
+    display: flex;
+    gap: 26px;
+  }
+}
