--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -4,8 +4,10 @@
 html * {
   font-family: $primary-font;
   font-size: 16px;
+  color: $white;
 }
 
 body {
   overflow-x: hidden;
+  background-color: $black;
 }
