--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -11,3 +11,9 @@ body {
   overflow-x: hidden;
   background-color: $black;
 }
+
+div.separation {
+  width: 100%;
+  height: 2px;
+  background-color: $white;
+}
