--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -4,6 +4,12 @@
 .projects {
   margin-top: 80px;
   margin-bottom: 92px;
+  position: relative;
+  img.spiral-projects {
+    position: absolute;
+    right: -120px;
+    top: -150px;
+  }
   &__header {
     display: flex;
     justify-content: space-between;
