--- a/src/scss/layout/_tecnologies.scss
+++ b/src/scss/layout/_tecnologies.scss
@@ -9,15 +9,31 @@
   gap: 24px;
   margin-top: 40px;
   margin-bottom: 40px;
+  @include breakpoint(tablet) {
+    margin-top: 52px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: start;
+    gap: 50px;
+    margin-bottom: 100px;
+  }
   &__item {
     &__title {
       font-size: 32px;
       font-weight: 700;
       margin-bottom: 4px;
+      @include breakpoint(tablet) {
+        font-size: 48px;
+        margin-bottom: 14px;
+      }
     }
     &__subtitle {
       font-size: 16px;
       font-weight: 500;
+      color: $grey;
+      @include breakpoint(tablet) {
+        font-size: 18px;
+      }
     }
   }
 }
