--- a/src/scss/themes/_default.scss
+++ b/src/scss/themes/_default.scss
@@ -12,8 +12,14 @@ body {
   background-color: $black;
 }
 
-div.separation {
+div.separation,
+div.separation-tecnologies {
   width: 100%;
   height: 2px;
   background-color: $white;
+}
+div.separation-tecnologies {
+  @include breakpoint(tablet) {
+    display: none;
+  }
 }
