--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -4,22 +4,39 @@
 .contact {
   margin-bottom: 100px;
   position: relative;
+  @include breakpoint(tablet) {
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+  }
   img.spiral-contact {
     position: absolute;
     left: -258px;
     bottom: 14px;
+    @include breakpoint(tablet) {
+      left: -434px;
+      bottom: -67px;
+    }
   }
   &__title {
     font-size: 40px;
     font-weight: 700;
     text-align: center;
     margin-bottom: 20px;
+    @include breakpoint(tablet) {
+      font-size: 72px;
+    }
   }
   &__subtitle {
     font-size: 16px;
     font-weight: 500;
     text-align: center;
     margin-bottom: 50px;
+    color: $grey;
+    @include breakpoint(tablet) {
+      font-size: 20px;
+    }
   }
   &__form {
     display: flex;
@@ -100,6 +117,9 @@
       border: none;
       align-self: flex-end;
       cursor: pointer;
+      @include breakpoint(tablet) {
+        font-size: 18px;
+      }
     }
   }
 }
