--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -10,6 +10,13 @@
   margin-bottom: 50px;
   margin-top: 50px;
   gap: 20px;
+  @include breakpoint(tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
   &__logo img {
     width: 130px;
   }
