--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -15,6 +15,10 @@ div.container {
     @include breakpoint(tablet) {
       top: 69px;
     }
+    @include breakpoint(desktop) {
+      top: 69px;
+      left: -50px;
+    }
   }
   @include breakpoint(tablet) {
     max-width: 768px;
@@ -23,6 +27,15 @@ div.container {
     padding: 30px;
     background-image: url(img/img-adam.png);
     background-position: top right;
+    background-size: 340px;
+    background-repeat: no-repeat;
+  }
+  @include breakpoint(desktop) {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px 170px;
+    background-position: top right 140px;
     background-size: 340px;
     background-repeat: no-repeat;
   }
