--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,9 @@
     justify-content: space-between;
     margin: 0;
     margin-bottom: 70px;
+    @include breakpoint(desktop) {
+      margin-bottom: 80px;
+    }
   }
   &__logo img {
     width: 130px;
