--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -14,6 +14,9 @@
     width: 66%;
     margin-bottom: 72px;
   }
+  @include breakpoint(desktop) {
+    margin-bottom: 200px;
+  }
 
   &::after {
     content: "";
@@ -29,6 +32,13 @@
     @include breakpoint(tablet) {
       top: 290px;
       right: -330px;
+      border: 3px solid white;
+      width: 125px;
+      height: 125px;
+    }
+    @include breakpoint(desktop) {
+      top: 200px;
+      right: -50px;
       border: 3px solid white;
       width: 125px;
       height: 125px;
@@ -59,6 +69,12 @@
       letter-spacing: 2.04px;
       margin-bottom: 66px;
     }
+    @include breakpoint(desktop) {
+      width: 680px;
+      font-size: 65px;
+      margin-bottom: 43px;
+    }
+
     span {
       text-decoration: underline;
       text-decoration-color: $green;
@@ -80,6 +96,10 @@
       font-size: 20px;
       line-height: 28px;
       margin-bottom: 32px;
+    }
+    @include breakpoint(tablet) {
+      width: 500px;
+      margin-bottom: 66px;
     }
   }
   &__button a {
