--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -5,36 +5,45 @@
   margin-top: 80px;
   margin-bottom: 92px;
   position: relative;
+
   @include breakpoint(tablet) {
     margin-bottom: 172px;
   }
+
   @include breakpoint(desktop) {
     margin-bottom: 200px;
   }
+
   img.spiral-projects {
     position: absolute;
     right: -120px;
     top: -150px;
+
     @include breakpoint(desktop) {
       right: -250px;
       top: -190px;
     }
   }
+
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 40px;
+
     @include breakpoint(tablet) {
       margin-bottom: 60px;
     }
+
     &__title {
       font-size: 40px;
       font-weight: 700;
+
       @include breakpoint(tablet) {
         font-size: 72px;
       }
     }
+
     .button {
       @include breakpoint(tablet) {
         font-size: 18px;
@@ -42,8 +51,23 @@
     }
   }
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    @include breakpoint(tablet) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 60px 20px;
+    }
+
+    @include breakpoint(desktop) {
+      gap: 60px 30px;
+    }
+  }
+
   &__article {
-    margin-bottom: 52px;
+    margin-bottom: 0;
 
     @include breakpoint(desktop) {
       position: relative;
@@ -52,12 +76,7 @@
     &__img {
       max-width: 100%;
       margin-bottom: 20px;
-
-      @include breakpoint(desktop) {
-        position: relative;
-        display: block;
-        transition: filter 0.3s ease;
-      }
+      display: block;
     }
 
     &__title {
@@ -69,6 +88,7 @@
 
     &__tecnologies {
       display: flex;
+      flex-wrap: wrap;
       gap: 18px;
       margin-bottom: 20px;
       p {
@@ -84,25 +104,19 @@
 
       @include breakpoint(desktop) {
         position: absolute;
-        top: 0;
+        top: -100px;
         left: 0;
         right: 0;
-        bottom: 0;
-        display: flex;
+        bottom: 20px;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        gap: 50px;
-        z-index: 3;
+        gap: 16px;
+        background-color: rgba(0, 0, 0, 0.75);
         opacity: 0;
         visibility: hidden;
         transition: all 0.3s ease;
-        background-color: rgba(0, 0, 0, 0.75);
-        margin-bottom: 20px;
-        a {
-          position: relative;
-          z-index: 4;
-        }
+        z-index: 2;
       }
     }
 
@@ -112,22 +126,7 @@
           opacity: 1;
           visibility: visible;
         }
-
-        .projects__article__img {
-          filter: brightness(0.8);
-        }
       }
     }
   }
-
-  &__content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-  }
-}
-
-div.projects__content {
-  display: flex;
-  flex-direction: column;
 }
