--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -25,7 +25,7 @@ div.container {
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
-    background-image: url(img/img-adam.png);
+    background-image: url("/img/img-adam.png");
     background-position: top right;
     background-size: 340px;
     background-repeat: no-repeat;
